group = 'io.orkes.conductor'

apply from: "$rootDir/versions.gradle"

subprojects {
    apply plugin: 'java'
    group = 'io.orkes.conductor'

    compileJava {
        sourceCompatibility = 17
        targetCompatibility = 17
    }

    dependencies {
        // ### candidates to be shadowed ###
        implementation "com.google.guava:guava:${versions.guava}"
        // #################################
        implementation "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${versions.jackson}"
        implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${versions.jackson}"

        implementation "org.slf4j:slf4j-api:${versions.slf4j}"
        implementation "org.apache.commons:commons-lang3:${versions.commonsLang}"
        annotationProcessor "org.projectlombok:lombok:${versions.lombok}"
        compileOnly "org.projectlombok:lombok:${versions.lombok}"
    }

    repositories {
        mavenCentral()
        mavenLocal()
        maven {
            url "https://s01.oss.sonatype.org/content/repositories/releases/"
        }
    }
}

